# smo-monorepo

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  TODO.md  docker-compose.yml  noxfile.py  pyproject.toml  ruff.toml
.builds/: debian.yml-fail  fedora.yml-fail  rockylinux.yml  ubuntu.yml
config/: flask.env
docs/: files.txt  smo-cli.md
examples/brussels-demo/: README.md  create-existing-artifact.sh  delete.sh  tasks.py
examples/brussels-demo/hdag/: hdag.yaml
examples/brussels-demo/image-compression-vo/: values.yaml
examples/brussels-demo/image-compression-vo/scripts/: app.py
examples/brussels-demo/image-compression-vo/templates/: deployment.yaml  hpa.yaml
examples/brussels-demo/image-detection/: values.yaml
examples/brussels-demo/image-detection/templates/: deployment.yaml
examples/brussels-demo/noise-reduction/: values.yaml
examples/brussels-demo/noise-reduction/templates/: deployment.yaml
examples/brussels-demo/src/image-detection/: Dockerfile  app.py
examples/brussels-demo/src/noise-reduction/: Dockerfile  app.py
examples/brussels-demo/src/virtual-object/: Dockerfile
smo-cli/: Makefile  README.md  pyproject.toml
smo-cli/src/smo_cli/: cli.py  config.py  console.py  database.py  providers.py
smo-cli/src/smo_cli/commands/: cluster.py  config.py  exceptions.py  graph.py  init.py  scaler.py
smo-cli/src/smo_cli/core/: config.py  context.py  database.py
smo-cli/tests/: conftest.py  test_cluster_commands.py  test_di.py  test_graph_commands.py  test_init_command.py  test_init_unit.py
smo-cli/tests/commands/: test_cluster_commands.py  test_config_command.py  test_graph_commands.py  test_init_command.py  test_scaler_command.py
smo-core/: .gitignore  README.md  pyproject.toml
smo-core/examples/: green_demo.py  scaling.py
smo-core/src/smo_core/: config.py  context.py  database.py
smo-core/src/smo_core/helpers/: __init__.py  karmada_helper.py  prometheus_helper.py
smo-core/src/smo_core/helpers/grafana/: grafana_helper.py  grafana_template.py
smo-core/src/smo_core/models/: __init__.py  base.py  cluster.py  graph.py  service.py
smo-core/src/smo_core/models/hdag/: graph.py  service.py
smo-core/src/smo_core/services/: __init__.py  cluster_service.py  graph_service.py  placement_service.py  scaler_service.py
smo-core/src/smo_core/services/hdag/: graph_service.py
smo-core/src/smo_core/utils/: __init__.py  artifacts.py  external_commands.py  formatters.py  grafana_helper.py  intent_translation.py  karmada_helper.py  placement.py  prometheus_helper.py  scaling.py
smo-core/tests/: conftest.py  readme.md
smo-core/tests/a_unit/helpers/: test_grafana_helper.py  test_grafana_template.py  test_karmada_helper.py  test_prometheus_helper.py
smo-core/tests/a_unit/services/: test_cluster_service.py  test_graph_service.py  test_placement_service.py  test_scaler_service.py
smo-core/tests/a_unit/utils/: test_formatters.py  test_helpers.py  test_intent_translation.py  test_placement.py  test_placement2.py  test_scaling.py
smo-core/tests/a_unit/utils2/: test_helpers.py  test_intent_translation.py  test_placement.py
smo-core/tests/b_integration/services/: test_graph_service.py
smo-sdk/: Makefile  README.md  main.py  pyproject.toml
smo-sdk/src/smo_sdk/: __init__.py
smo-sdk/src/smo_sdk/api/clusters/: smo_web_handlers_cluster_get_clusters.py
smo-sdk/src/smo_sdk/api/graph/: smo_web_handlers_graph_deploy.py  smo_web_handlers_graph_get_all_for_project.py  smo_web_handlers_graph_get_graph.py  smo_web_handlers_graph_placement.py  smo_web_handlers_graph_remove.py  smo_web_handlers_graph_start.py  smo_web_handlers_graph_stop.py
smo-sdk/src/smo_sdk/api/internal/: smo_web_handlers_graph_alert.py
smo-sdk/src/smo_sdk/models/: __init__.py  cluster.py  graph.py  graph_services_item.py  problem.py  smo_web_handlers_graph_alert_body.py  smo_web_handlers_graph_deploy_json_body.py
smo-sdk/tests/: conftest.py  test_a_unit.py  test_b_e2e.py
smo-ui/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
smo-ui/docs/: architecture.md
smo-ui/src/smo_ui/: app.py  cli.py  config.py  config.yaml  extensions.py  providers.py  smo.db  templating.py  testing.py
smo-ui/src/smo_ui/models/: events.py
smo-ui/src/smo_ui/routes/: __init__.py  clusters.py  docs.py  events.py  graphs.py  main.py  marketplace.py  projects.py  settings.py
smo-ui/src/smo_ui/static/css/: common.css
smo-ui/src/smo_ui/static/js/: components.js
smo-ui/src/smo_ui/templates/: base.html  cluster_details.html  cluster_list.html  clusters.html  dashboard.html  deploy.html  docs.html  events.html  graph_details.html  graph_list.html  graphs.html  index.html  marketplace.html  project_details.html  projects.html  settings.html
smo-ui/tests/: conftest.py  test_models.py  test_routes.py  test_routes2.py
smo-web/: Dockerfile  Makefile  changes.md  docker-compose.yml  pyproject.toml  readme.md  todo.md
smo-web/config/: postgres.env
smo-web/src/smo_web/: app.py  asgi.py  config.py  config_from_env.py  database.py  di.py  error_handlers.py  providers.py  util.py
smo-web/src/smo_web/handlers/: cluster.py  graph.py
smo-web/src/smo_web/swagger/: openapi.yaml
