[project]
name = "smo-core"
version = "0.2.0"
description = "Core library for the Synergetic Meta-Orchestrator, containing business logic and utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "SQLAlchemy>=2.0",
    "kubernetes>=28.0",
    "requests>=2.28",
    "PyYAML>=6.0",
    "cvxpy[highs]>=1.3",
    "scipy",
    "numpy",
    "glom>=24.11.0",
]

[dependency-groups]
dev = [
    "abilian-devtools>=0.7.7",
    "coverage>=7.9.2",
    "devtools>=0.12.2",
    "pytest-mock>=3.14.1",
    "hatchling",
    "uv-build",
]

[build-system]
requires = ["uv-build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "smo_core"

