[project]
name = "smo-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
]

[tool.poetry.dependencies]
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smo_sdk"]

[dependency-groups]
dev = [
    "abilian-devtools>=0.7.7",
    "coverage>=7.9.2",
    "devtools>=0.12.2",
    "pytest-mock>=3.14.1",
    "hatchling",
]
