[project]
name = "smo-sdk"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "abilian-devtools>=0.7.7",
    "coverage>=7.9.2",
    "devtools>=0.12.2",
    "pytest-mock>=3.14.1",
    "hatchling",
    "pytest>=8.4.1",
    "respx>=0.22.0",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]


[build-system]
requires = ["uv-build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "smo_sdk"
module-root = "src"
