[project]
name = "smo-web"
version = "0.1.0"
description = "A Connexion-based web interface for the Synergetic Meta-Orchestrator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "smo-core",
    "connexion[swagger-ui]>=3.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "abilian-devtools>=0.7.7",
    "coverage>=7.9.2",
    "devtools>=0.12.2",
    "pytest-mock>=3.14.1",
    "hatchling",
    "pytest",
    "pytest-mock",
    "requests",
    "gunicorn>=21.0",
    "uvicorn>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smo_web"]

