[project]
name = "smo-web"
version = "0.2.0"
description = "A Connexion-based web interface for the Synergetic Meta-Orchestrator."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "smo-core",
    "connexion[flask, swagger-ui]>=3.0",
    "python-dotenv>=1.0",
    "asyncpg >= 0.30.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "abilian-devtools>=0.7.7",
    "coverage>=7.9.2",
    "devtools>=0.12.2",
    "pytest-mock>=3.14.1",
    "hatchling",
    "pytest",
    "pytest-mock",
    "requests",
    "gunicorn>=21.0",
    "uvicorn>=0.20",
    "uv-build",
]

[build-system]
requires = ["uv-build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "smo_web"
module-root = "src"
